update browser aliases

--- a/package.json
+++ b/package.json
@@ -12,7 +12,26 @@
   "main": "index.js",
   "module": "index.mjs",
   "browser": {
-    "index.js": "lit-html"
+    "./index.js": "lit-html/lit-html.js",
+    "./index.mjs": "lit-html/lit-html.js",
+    "./directives/async-append.js": "lit-html/directives/async-append.js",
+    "./directives/async-append.mjs": "lit-html/directives/async-append.js",
+    "./directives/cache.js": "lit-html/directives/cache.js",
+    "./directives/cache.mjs": "lit-html/directives/cache.js",
+    "./directives/class-map.js": "lit-html/directives/class-map.js",
+    "./directives/class-map.mjs": "lit-html/directives/class-map.js",
+    "./directives/guard.js": "lit-html/directives/guard.js",
+    "./directives/guard.mjs": "lit-html/directives/guard.js",
+    "./directives/if-defined.js": "lit-html/directives/if-defined.js",
+    "./directives/if-defined.mjs": "lit-html/directives/if-defined.js",
+    "./directives/repeat.js": "lit-html/directives/repeat.js",
+    "./directives/repeat.mjs": "lit-html/directives/repeat.js",
+    "./directives/style-map.js": "lit-html/directives/style-map.js",
+    "./directives/style-map.mjs": "lit-html/directives/style-map.js",
+    "./directives/unsafe-html.js": "lit-html/directives/unsafe-html.js",
+    "./directives/unsafe-html.mjs": "lit-html/directives/unsafe-html.js",
+    "./directives/until.js": "lit-html/directives/until.js",
+    "./directives/until.mjs": "lit-html/directives/until.js"
   },
   "repository": "https://github.com/popeindustries/lit-html.git",
   "author": "Alexander Pope <alex@pope-industries.com>",
