--- a/package.json
+++ b/package.json
@@ -36,34 +36,28 @@
   "repository": "https://github.com/popeindustries/lit-html.git",
   "author": "Alexander Pope <alex@pope-industries.com>",
   "license": "MIT",
-  "dependencies": {
+  "peerDependencies": {
     "@popeindustries/lit-html-server": "^1.3.0",
     "lit-html": "^1.1.0"
   },
   "devDependencies": {
+    "@popeindustries/lit-html-server": "^1.3.0",
     "babel-eslint": "^10.0.1",
-    "chai": "^4.2.0",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "esm": "^3.2.25",
     "husky": "^3.0.2",
     "lint-staged": "^9.2.1",
-    "mocha": "^6.2.0",
-    "prettier": "^1.17.1",
-    "rollup": "^1.17.0",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-node-resolve": "^5.0.0"
+    "lit-html": "^1.1.0",
+    "prettier": "^1.17.1"
   },
   "engines": {
     "node": ">=10"
   },
   "scripts": {
-    "build": "node ./scripts/build.js",
     "format": "prettier --write './{src,test}/**/*.{js,json}'",
     "lint": "eslint './{src,test}/**/*.js'",
-    "prepublishOnly": "npm run build",
-    "test": "npm run build && NODE_ENV=test mocha \"test/*-test.js\" --reporter spec --bail --timeout 2000 --require esm"
+    "prepublishOnly": "npm run build"
   },
   "husky": {
     "hooks": {
