--- a/package.json
+++ b/package.json
@@ -12,26 +12,26 @@
   "main": "index.js",
   "module": "index.mjs",
   "browser": {
-    "./index.js": "lit-html/lit-html.js",
-    "./index.mjs": "lit-html/lit-html.js",
-    "./directives/async-append.js": "lit-html/directives/async-append.js",
-    "./directives/async-append.mjs": "lit-html/directives/async-append.js",
-    "./directives/cache.js": "lit-html/directives/cache.js",
-    "./directives/cache.mjs": "lit-html/directives/cache.js",
-    "./directives/class-map.js": "lit-html/directives/class-map.js",
-    "./directives/class-map.mjs": "lit-html/directives/class-map.js",
-    "./directives/guard.js": "lit-html/directives/guard.js",
-    "./directives/guard.mjs": "lit-html/directives/guard.js",
-    "./directives/if-defined.js": "lit-html/directives/if-defined.js",
-    "./directives/if-defined.mjs": "lit-html/directives/if-defined.js",
-    "./directives/repeat.js": "lit-html/directives/repeat.js",
-    "./directives/repeat.mjs": "lit-html/directives/repeat.js",
-    "./directives/style-map.js": "lit-html/directives/style-map.js",
-    "./directives/style-map.mjs": "lit-html/directives/style-map.js",
-    "./directives/unsafe-html.js": "lit-html/directives/unsafe-html.js",
-    "./directives/unsafe-html.mjs": "lit-html/directives/unsafe-html.js",
-    "./directives/until.js": "lit-html/directives/until.js",
-    "./directives/until.mjs": "lit-html/directives/until.js"
+    "./index.js": "./browser/index.js",
+    "./index.mjs": "./browser/index.js",
+    "./directives/async-append.js": "./browser/directives/async-append.js",
+    "./directives/async-append.mjs": "./browser/directives/async-append.js",
+    "./directives/cache.js": "./browser/directives/cache.js",
+    "./directives/cache.mjs": "./browser/directives/cache.js",
+    "./directives/class-map.js": "./browser/directives/class-map.js",
+    "./directives/class-map.mjs": "./browser/directives/class-map.js",
+    "./directives/guard.js": "./browser/directives/guard.js",
+    "./directives/guard.mjs": "./browser/directives/guard.js",
+    "./directives/if-defined.js": "./browser/directives/if-defined.js",
+    "./directives/if-defined.mjs": "./browser/directives/if-defined.js",
+    "./directives/repeat.js": "./browser/directives/repeat.js",
+    "./directives/repeat.mjs": "./browser/directives/repeat.js",
+    "./directives/style-map.js": "./browser/directives/style-map.js",
+    "./directives/style-map.mjs": "./browser/directives/style-map.js",
+    "./directives/unsafe-html.js": "./browser/directives/unsafe-html.js",
+    "./directives/unsafe-html.mjs": "./browser/directives/unsafe-html.js",
+    "./directives/until.js": "./browser/directives/until.js",
+    "./directives/until.mjs": "./browser/directives/until.js"
   },
   "repository": "https://github.com/popeindustries/lit-html.git",
   "author": "Alexander Pope <alex@pope-industries.com>",
@@ -41,14 +41,12 @@
     "lit-html": "^1.1.0"
   },
   "devDependencies": {
-    "@popeindustries/lit-html-server": "^1.3.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "husky": "^3.0.2",
     "lint-staged": "^9.2.1",
-    "lit-html": "^1.1.0",
     "prettier": "^1.17.1"
   },
   "engines": {
