--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
     "lit-html": "^1.1.0"
   },
   "devDependencies": {
+    "@popeindustries/lit-html-server": "^1.4.1",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "husky": "^3.0.2",
     "lint-staged": "^9.2.1",
+    "lit-html": "^1.1.2",
     "prettier": "^1.17.1"
   },
   "engines": {
