--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@popeindustries/lit-html",
-  "version": "1.0.2",
+  "version": "2.0.0-beta.1",
   "description": "Seamlessly render lit-html templates on the server and in the browser",
   "author": "Alexander Pope <alex@pope-industries.com>",
   "keywords": [
