--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@popeindustries/lit-html",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0-beta.2",
   "description": "Seamlessly render lit-html templates on the server and in the browser",
   "author": "Alexander Pope <alex@pope-industries.com>",
   "keywords": [
@@ -43,11 +43,11 @@
     "node": ">=10"
   },
   "peerDependencies": {
-    "@popeindustries/lit-html-server": "^2.0.0",
+    "@popeindustries/lit-html-server": "^2.0.0-beta.2",
     "lit-html": "^1.1.2"
   },
   "devDependencies": {
-    "@popeindustries/lit-html-server": "^2.0.0",
+    "@popeindustries/lit-html-server": "^2.0.0-beta.2",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
