--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@popeindustries/lit-html-server": "^1.4.1",
     "babel-eslint": "^10.0.1",
+    "dvlp": "^7.5.2",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
@@ -57,7 +58,8 @@
   },
   "scripts": {
     "format": "prettier --write './{src,test}/**/*.{js,json}'",
-    "lint": "eslint './{src,test}/**/*.js'"
+    "lint": "eslint './{src,test}/**/*.js'",
+    "test": "dvlp tests/"
   },
   "husky": {
     "hooks": {
