--- a/.eslintrc
+++ b/.eslintrc
@@ -1,25 +1,19 @@
 {
+  "root": true,
   "env": {
     "es6": true,
     "mocha": true,
     "node": true
   },
-  "globals": {
-    "globalThis": true
-  },
   "extends": ["eslint:recommended", "prettier"],
-  "parser": "babel-eslint",
   "parserOptions": {
-    "ecmaVersion": 2017,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "experimentalObjectRestSpread": true
-    }
+    "ecmaVersion": 2020,
+    "sourceType": "module"
   },
   "plugins": ["prettier"],
   "rules": {
     "no-console": "off",
-    "no-unused-vars": ["error", { "ignoreRestSiblings": true }],
+    "no-unused-vars": ["error", { "args": "none", "ignoreRestSiblings": true }],
     "sort-imports": [
       "warn",
       { "ignoreCase": true, "memberSyntaxSortOrder": ["none", "all", "multiple", "single"] }
