--- a/package.json
+++ b/package.json
@@ -11,69 +11,98 @@
     "template"
   ],
   "main": "index.js",
-  "module": "index.mjs",
-  "browser": {
-    "./index.js": "./browser/index.js",
-    "./index.mjs": "./browser/index.js",
-    "./directives/async-append.js": "./browser/directives/async-append.js",
-    "./directives/async-append.mjs": "./browser/directives/async-append.js",
-    "./directives/async-repeat.js": "./browser/directives/async-repeat.js",
-    "./directives/async-repeat.mjs": "./browser/directives/async-repeat.js",
-    "./directives/cache.js": "./browser/directives/cache.js",
-    "./directives/cache.mjs": "./browser/directives/cache.js",
-    "./directives/class-map.js": "./browser/directives/class-map.js",
-    "./directives/class-map.mjs": "./browser/directives/class-map.js",
-    "./directives/guard.js": "./browser/directives/guard.js",
-    "./directives/guard.mjs": "./browser/directives/guard.js",
-    "./directives/if-defined.js": "./browser/directives/if-defined.js",
-    "./directives/if-defined.mjs": "./browser/directives/if-defined.js",
-    "./directives/repeat.js": "./browser/directives/repeat.js",
-    "./directives/repeat.mjs": "./browser/directives/repeat.js",
-    "./directives/style-map.js": "./browser/directives/style-map.js",
-    "./directives/style-map.mjs": "./browser/directives/style-map.js",
-    "./directives/unsafe-html.js": "./browser/directives/unsafe-html.js",
-    "./directives/unsafe-html.mjs": "./browser/directives/unsafe-html.js",
-    "./directives/until.js": "./browser/directives/until.js",
-    "./directives/until.mjs": "./browser/directives/until.js"
-  },
   "types": "index.d.ts",
+  "exports": {
+    ".": {
+      "browser": "./browser/index.js",
+      "import": "./index.mjs",
+      "require": "./index.js"
+    },
+    "./directives/async-append.js": {
+      "browser": "./browser/directives/async-append.js",
+      "import": "./directives/async-append.mjs",
+      "require": "./directives/async-append.js"
+    },
+    "./directives/async-replace.js": {
+      "browser": "./browser/directives/async-replace.js",
+      "import": "./directives/async-replace.mjs",
+      "require": "./directives/async-replace.js"
+    },
+    "./directives/cache.js": {
+      "browser": "./browser/directives/cache.js",
+      "import": "./directives/cache.mjs",
+      "require": "./directives/cache.js"
+    },
+    "./directives/class-map.js": {
+      "browser": "./browser/directives/class-map.js",
+      "import": "./directives/class-map.mjs",
+      "require": "./directives/class-map.js"
+    },
+    "./directives/guard.js": {
+      "browser": "./browser/directives/guard.js",
+      "import": "./directives/guard.mjs",
+      "require": "./directives/guard.js"
+    },
+    "./directives/if-defined.js": {
+      "browser": "./browser/directives/if-defined.js",
+      "import": "./directives/if-defined.mjs",
+      "require": "./directives/if-defined.js"
+    },
+    "./directives/repeat.js": {
+      "browser": "./browser/directives/repeat.js",
+      "import": "./directives/repeat.mjs",
+      "require": "./directives/repeat.js"
+    },
+    "./directives/style-map.js": {
+      "browser": "./browser/directives/style-map.js",
+      "import": "./directives/style-map.mjs",
+      "require": "./directives/style-map.js"
+    },
+    "./directives/unsafe-html.js": {
+      "browser": "./browser/directives/unsafe-html.js",
+      "import": "./directives/unsafe-html.mjs",
+      "require": "./directives/unsafe-html.js"
+    },
+    "./directives/until.js": {
+      "browser": "./browser/directives/until.js",
+      "import": "./directives/until.mjs",
+      "require": "./directives/until.js"
+    }
+  },
   "repository": "https://github.com/popeindustries/lit-html.git",
   "license": "MIT",
   "engines": {
-    "node": ">=10"
+    "node": ">=14"
   },
   "peerDependencies": {
-    "@popeindustries/lit-html-server": "^3.0.0",
-    "lit-html": "^1.1.2"
+    "@popeindustries/lit-html-server": "^4.0.1",
+    "lit-html": "^1.4.1"
   },
   "devDependencies": {
-    "@popeindustries/lit-html-server": "^3.0.0",
-    "babel-eslint": "^10.0.1",
-    "dvlp": "^7.5.2",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "husky": "^4.0.10",
-    "lint-staged": "^10.0.8",
-    "lit-html": "^1.1.2",
-    "prettier": "^1.19.1"
+    "@popeindustries/lit-html-server": "^4.0.1",
+    "dvlp": "^14.1.1",
+    "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.2",
+    "lit-html": "^1.4.1",
+    "prettier": "^2.5.1"
   },
   "scripts": {
-    "format": "prettier --write './{src,test}/**/*.{js,json}'",
-    "lint": "eslint './{src,test}/**/*.js'",
-    "test": "dvlp tests/"
+    "test": "dvlp tests"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+  "prettier": {
+    "arrowParens": "always",
+    "htmlWhitespaceSensitivity": "ignore",
+    "printWidth": 100,
+    "singleQuote": true
   },
   "lint-staged": {
     "*.js": [
-      "prettier --write",
       "eslint"
     ],
-    "*.json": [
+    "*.{js,json,md,html}": [
       "prettier --write"
     ]
   }
